src/test/ui/const-pattern-not-const-evaluable.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-pattern-not-const-evaluable.rs:22:31
   |
22 | const BOO: Pair<Cake, Cake> = Pair(Marmor, BlackForest);
   |                               ^^^^ unimplemented constant expression: tuple struct constructors
   |
note: for pattern here
  --> $DIR/const-pattern-not-const-evaluable.rs:37:9
   |
37 |         FOO => println!("hi"),
   |         ^^^

error: aborting due to previous error

